ingress-controller/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: redserver
  name: redserver
spec:
  replicas: 2
  selector:
    matchLabels:
      app: redserver
  template:
    metadata:
      labels:
        app: redserver
    spec:
      containers:
      - image: mohitha28/rollingupdate:v1
        name: rollingupdate

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: redserver
  name: redserver
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: redserver


---
#ingress-controller
kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/main/deploy/static/provider/cloud/deploy.yaml 

---
kubectl get pods -n ingress-nginx
kubectl get svc -n ingress-nginx
