ingress-controller/ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: color-ingress
spec:
  ingressClassName: nginx

  rules:
  - host: www.mohitha.xyz
    http:
      paths:
      - path: /uat
        pathType: Prefix
        backend:
          service:
            name: redserver
            port:
              number: 80

      - path: /dev
        pathType: Prefix
        backend:
          service:
            name: blueserver
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: color-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  ingressClassName: nginx

  rules:
  - host: www.mohitha.xyz
    http:
      paths:
      - path: /dev
        pathType: Prefix
        backend:
          service:
            name: redserver
            port:
              number: 80

      - path: /uat
        pathType: Prefix
        backend:
          service:
            name: blueserver
            port:
              number: 80
