ingress-controller/letsEncrypt.yaml
---
#Install cert-manager
kubectl apply -f https://github.com/cert-manager/cert-manager/releases/latest/download/cert-manager.yaml
-kubectl get pods -n cert-manager
#clusterissuer.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: color-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-prod

spec:
  ingressClassName: nginx

  tls:
  - hosts:
    - www.mohitha.xyz
    secretName: mohitha-tls-secret

  rules:
  - host: www.mohitha.xyz
    http:
      paths:
      - path: /dev
        pathType: Prefix
        backend:
          service:
            name: redserver
            port:
              number: 80

      - path: /uat
        pathType: Prefix
        backend:
          service:
            name: blueserver
            port:
              number: 80

              


Error from server (BadRequest): error when creating "ingress.yaml": admission webhook "validate.nginx.ingress.kubernetes.io" denied the request: host "www.mohitha.xyz" and path "/dev" is already defined in ingress default/color-ingress
then --->kubectl get ingress color-ingress -o yaml > ingress.yaml
     ---> kubectl apply -f ingress.yaml
     ---> kubectl get certificate
NAME                 READY   SECRET               AGE
mohitha-tls-secret   True    mohitha-tls-secret   38s
